[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CVAugmentor"
version = "1.1.01"
description = "A package for augmenting images and videos for computer vision tasks"
readme = "README.md"
authors = [
    {name = "Ali Khalili Tazehkandgheshlagh", email = "ali.khalili.t98@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12.8"

dependencies = [
    "colorama==0.4.6",
    "numpy==2.2.2",
    "opencv-python==4.11.0.86",
    "Pillow==11.1.0",
    "tqdm==4.67.1",
]

[project.urls]
Homepage = "https://github.com/AliKHaliliT/CVAugmentor"

[tool.setuptools.packages.find]
where = ["."]
include = ["CVAugmentor*"]

[project.optional-dependencies]
dev = ["unittest"]